--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,3 +1,5 @@
+<html>
+<body>
 <h1>Privacy Policy</h1>
 <p>Last updated: December 28, 2023</p>
 <p>Clubstick built the Guess Numbers app as a Freemium app. This SERVICE is provided by Clubstick at no cost and is intended for use as is.</p>
@@ -78,3 +80,5 @@
 <h2>Contact Us</h2>
 <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at clubstick.games@gmail.com</p>
 <p></p>
+</body>
+</html>
