- log data description update

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -32,7 +32,7 @@
 <p></p>
 <h2>Log Data</h2>
 <p></p>
-<p>I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</p>
+<p>I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device identifier, browser type, device type, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, the areas of the Website you visit, and other statistics.</p>
 <p></p>
 <h2>Cookies</h2>
 <p></p>
