--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -23,7 +23,7 @@
 <a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a>
 </li>
 <li>
-<a href="https://www.applovin.com/privacy/" target="_blank">Applovin</a>
+<a href="https://appodeal.com/privacy-policy/" target="_blank">Appodeal</a>
 </li>
 <li>
 <a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>
