- added policy for Neon Clash

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <body>
 <h1>
 <a href="https://clubstick.github.io/Policies/guess_numbers_privacy_policy.html" target="_blank">Guess Numbers</a>
+<a href="https://clubstick.github.io/Policies/neon_clash_privacy_policy.html" target="_blank">Neon Clash</a>
 </h1>
 </body>
 </html>
