- fix line shifting

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
-<body>
-<h1>
-<a href="https://clubstick.github.io/Policies/guess_numbers_privacy_policy.html" target="_blank">Guess Numbers</a>
-</h1>
-<h1>
-<a href="https://clubstick.github.io/Policies/neon_clash_privacy_policy.html" target="_blank">Neon Clash</a>
-</h1>
-</body>
+  <body>
+    <h1>
+      <a href="https://clubstick.github.io/Policies/guess_numbers_privacy_policy.html" target="_blank">
+        Guess Numbers
+      </a>
+    </h1>
+
+    <h1>
+      <a href="https://clubstick.github.io/Policies/neon_clash_privacy_policy.html" target="_blank">
+        Neon Clash
+      </a>
+    </h1>
+  </body>
 </html>
